# P.L.U.M.E-Advanced

./: .gitignore  README.md  pyproject.toml
config/: default.yaml  project.toml
outputs/default-7/: config_snapshot.yaml  metrics.csv  summary.json  summary.txt
scripts/: generate_cave.py  render_branching.py  render_graph.py  render_host_field.py  render_network.py
src/: __init__.py  cli.py  config.py  pipeline.py  state.py
src/dataset/: runner.py
src/geology/: __init__.py  generator.py
src/hydro/: __init__.py  solver.py
src/meshing/: __init__.py  extractor.py
src/speleogenesis/: __init__.py  evolution.py
src/stages/: __init__.py  branching.py  branching_loop_astar.py  branching_models.py  branching_spur.py  geometry.py  geometry_assembly.py  geometry_export.py  geometry_junctions.py  geometry_skylight.py  geometry_sweep.py  geometry_types.py  graph.py  host_field.py  network.py  section_field.py
src/utils/: __init__.py  io.py
src/visualization/: __init__.py  _matplotlib.py  branching.py  geometry.py  graph.py  host_field.py  mesh_preview.py  metrics.py  network.py  plots.py  progress.py  section_field.py  slices.py
tests/: conftest.py  test_branching.py  test_geology.py  test_geometry.py  test_graph.py  test_host_field.py  test_network.py  test_pipeline.py  test_section_field.py  test_speleogenesis.py
