[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "PLUME-Advanced"
version = "0.1.0"
description = "Stage-oriented procedural lava tube prototype"
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "rich>=13.7",
  "scikit-image>=0.23",
  "scipy>=1.12",
  "trimesh>=4.4",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["src"]
